<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hint">Hello! Click the button to play cute noise or sounds. </string>
    <string name="app_name">Timer Bomb</string>
    <string name="start">start</string>
    <string name="Mins">Mins</string>
    <string name="Secs">Secs</string>
    <string name="cancel">cancel</string>
    <string name="countMin">00</string>
    <string name="countSec">00</string>
    <string name="set">Set time</string>

    <string-array name="items">
        <item>15 secs</item>  
        <item>30 secs</item>  
        <item>60 secs</item>  
        <item>120 secs</item>  
    </string-array>
    <string name="stop">stop</string>
    <string name="dismiss">dismiss</string>
    <string name="quote">:</string>
    <string name="bombed">bombed! bombed!</string>
    <string name="gameover">Game Over</string>
    <string name="counting">Counting</string>
    <string name="explodeimage">explode image</string>
    <string name="leftButton">leftButton</string>
    <string name="rightButton">rightButton</string>
    <string name="img">img</string> 
</resources>