<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/rock" >

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <com.google.ads.AdView
            android:id="@+id/ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="81dp"
            ads:adSize="BANNER"
            ads:adUnitId="a14fa0f3c3dccb3"
            ads:loadAdOnCreate="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" >

        <TextView
            android:id="@+id/minsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:text="@string/countMin"
            android:textColor="#ffffff"
            android:textSize="60dp" />

        <TextView
            android:id="@+id/tmp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:text="@string/quote"
            android:textColor="#ffffff"
            android:textSize="60dp" />

        <TextView
            android:id="@+id/secsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/countSec"
            android:textColor="#ffffff"
            android:textSize="60dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/startButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/start" />

        <ImageButton
            android:id="@+id/leftButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/startButton"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="97dp"
            android:contentDescription="@string/leftButton"
            android:src="@drawable/left" />

        <ImageButton
            android:id="@+id/rightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/leftButton"
            android:contentDescription="@string/rightButton"
            android:src="@drawable/right" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/startButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="55dp"
            android:contentDescription="@string/img"
            android:src="@drawable/choice1" />

        <Button
            android:id="@+id/setButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageView1"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="38dp"
            android:text="@string/set" />
    </RelativeLayout>

</RelativeLayout>