<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" >

        <TextView
            android:id="@+id/minsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:text="@string/countMin"
            android:textSize="60dp" />

        <TextView
            android:id="@+id/tmp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:text="@string/quote"
            android:textSize="60dp" />

        <TextView
            android:id="@+id/secsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/countSec"
            android:textSize="60dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
            

        <Button
            android:id="@+id/setButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="128dp"
            
            android:text="@string/set" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/setButton"
            android:layout_alignParentBottom="true"
            android:background="#00CA00"
           	android:height="35dp"
            android:text="@string/start"
            android:textColor="#ffffff" />

    </RelativeLayout>

</RelativeLayout>